# ComfyUI_VNCCS_Utils

./: CHANGELOG.md  README.md  __init__.py  hmr2_keypoint3d_20260505_233816.json  image_flux2_klein_image_edit_9b_distilled.json  image_z_image_turbo.json  pyproject.toml  requirements.txt  sam3d.json  test.json  unicanvas_presets.json  z_image_turbo_Inpaint.json
Slimy_PoseStudio/: CLAUDE.md  __init__.py
Slimy_PoseStudio/HandPoseLibrary/: CHOP.json  DEFAULT.json  FIST.json  OPEN.json  hand_001.json
Slimy_PoseStudio/PoseLibrary/: 0427-1.json  10.json  11.json  12.json  13.json  3.json  5.json  6.json  8.json  9.json  FckYou.json  Hi.json  Meditation.json  Seeking.json  V Selfie.json  Xpose.json  Youga.json  exercises1.json  exercises2.json  stay on hand.json  wide.json
Slimy_PoseStudio/api/: hand_pose_library.py  pose_library.py
Slimy_PoseStudio/docs/: MODEL_MANAGER_GUIDE.md  MODEL_SELECTOR_USAGE.md  VNCCS_POSE_STUDIO_USAGE.md
Slimy_PoseStudio/memory/: MEMORY.md  feedback_debugging_approach.md
api/: pose_library.py
config/: unicanvas_presets.json
docs/: UNICANVAS_MODEL_MODULES.md  VNCCS_POSE_STUDIO_USAGE.md  unicanvas_invoke_parity_audit.md
nodes/: anima_lllite_internal.py  pose_studio.py  unicanvas.py  vnccs_model_manager.py
vnccs_sam3d/: pose_import.py
web/: vnccs_camera_control.js  vnccs_mixamo_import.js  vnccs_model_manager.js  vnccs_openpose_import.js  vnccs_pose_morph_worker.js  vnccs_pose_studio.js  vnccs_pose_studio_core.js  vnccs_unicanvas.js
workflows/: VNCCS_Utils Pose Studio QWEN.json  VNCCS_Utils Pose Studio.json
(+21 files in other folders)
